@@ -65,8 +65,11 @@ dosit()
 
 	    obj = level.objects[u.ux][u.uy];
 	    You("sit on %s.", the(xname(obj)));
-	    if (!(Is_box(obj) || objects[obj->otyp].oc_material == CLOTH))
+	    if (youmonst.data->mlet == S_DRAGON) {
+		You("coil up around your hoard.");
+	    } else if (!(Is_box(obj) || objects[obj->otyp].oc_material == CLOTH)) {
 		pline("It's not very comfortable...");
+	    }
 
 	} else if ((trap = t_at(u.ux, u.uy)) != 0 ||
 		   (u.utrap && (u.utraptype >= TT_LAVA))) {
